apps/web/src/app/drag_controller/snapshots/qni_web__app__drag_controller__tests__shift_right_click_preview_snapshot.snap
---
source: src/app/drag_controller/tests.rs
expression: "rendered_gate_bodies(&app, &ctx, &geometry, egui::Pos2::ZERO, 0.0)"
---
[
    (
        [162.0 256.0],
        false,
    ),
    (
        [218.0 256.0],
        false,
    ),
    (
        [246.0 256.0],
        true,
    ),
    (
        [274.0 256.0],
        false,
    ),
]
